# The-Polls-API

./: .env.example  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: claude.yml
app/api/: danger.py  exceptions.py  polls.py  votes.py
app/models/: Choice.py  Polls.py  Results.py  Votes.py
app/services/: utils.py
