[project]
name = "poll-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "pydantic[email]>=2.11.7",
    "upstash-redis>=1.4.0",
    "uvicorn>=0.35.0",
]
